Included rendered html example.

--- a/output/team.html
+++ b/output/team.html
@@ -15,50 +15,76 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-12 jumbotron mb-3 team-heading">
+            <div class="col-12 jumbotron mb-3 p-3 team-heading text-white bg-dark">
                 <h1 class="text-center">My Team</h1>
             </div>
         </div>
     </div>
     <div class="container">
         <div class="row">
-            <div class="team-area col-12 d-flex justify-content-center">
-                <div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">Asdn</h2>
+            <div class="team-area col-12 d-flex flex-wrap justify-content-center">
+                <div class="card employee-card mb-3 mr-2">
+    <div class="card-header text-white bg-primary">
+        <h2 class="card-title">Andres Acosta</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 33</li>
-            <li class="list-group-item">Email: <a href="mailto:S@S.c">S@S.c</a></li>
-            <li class="list-group-item">Office number: 121</li>
+            <li class="list-group-item">ID: 32</li>
+            <li class="list-group-item">Email: <a href="mailto:andres_acosta_999@hotmail.com">andres_acosta_999@hotmail.com</a></li>
+            <li class="list-group-item">Office number: 131</li>
         </ul>
     </div>
 </div>
-<div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">Jan</h2>
+<div class="card employee-card mb-3 mr-2">
+    <div class="card-header text-white bg-primary">
+        <h2 class="card-title">John Smith</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 3434</li>
-            <li class="list-group-item">Email: <a href="mailto:J@J.c">J@J.c</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/3ddad" target="_blank" rel="noopener noreferrer">3ddad</a></li>
+            <li class="list-group-item">ID: 123</li>
+            <li class="list-group-item">Email: <a href="mailto:john_smith@gmail.com">john_smith@gmail.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/johnsmith" target="_blank" rel="noopener noreferrer">johnsmith</a></li>
         </ul>
     </div>
 </div>
-<div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">Sam</h2>
+<div class="card employee-card mb-3 mr-2">
+    <div class="card-header text-white bg-primary">
+        <h2 class="card-title">Paul Terrain</h2>
+        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 342</li>
+            <li class="list-group-item">Email: <a href="mailto:p-terrain@gmail.com">p-terrain@gmail.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/paulterrain" target="_blank" rel="noopener noreferrer">paulterrain</a></li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card mb-3 mr-2">
+    <div class="card-header text-white bg-primary">
+        <h2 class="card-title">Sebastian Nivelo</h2>
         <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 3434</li>
-            <li class="list-group-item">Email: <a href="mailto:F@f.c">F@f.c</a></li>
-            <li class="list-group-item">School: ada</li>
+            <li class="list-group-item">ID: 453</li>
+            <li class="list-group-item">Email: <a href="mailto:seb-niv@gmail.com">seb-niv@gmail.com</a></li>
+            <li class="list-group-item">School: PUCE</li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card mb-3 mr-2">
+    <div class="card-header text-white bg-primary">
+        <h2 class="card-title">Linda Abreu</h2>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 383</li>
+            <li class="list-group-item">Email: <a href="mailto:linda-ab@gmail.com">linda-ab@gmail.com</a></li>
+            <li class="list-group-item">School: UH</li>
         </ul>
     </div>
 </div>
